--- a/gtk-3.20/gtk-dark.css
+++ b/gtk-3.20/gtk-dark.css
@@ -5862,6 +5862,22 @@ LibraryWindow .the-button-in-the-combobox {
   border-radius: 50%;
   box-shadow: inset 0 0 0 1px rgba(255, 255, 255, 0.05), inset 0 1px 0 0 rgba(255, 255, 255, 0.45), inset 0 -1px 0 0 rgba(255, 255, 255, 0.15), 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.23); }
 
+/********************
+* sidebar level-bars*
+********************/
+.source-list.level-bar, .source-list.level-bar:selected, .source-list.level-bar:selected:focus {
+  background-color: rgba(0, 0, 0, 0.14);
+  border: 1px solid rgba(0, 0, 0, 0.14);
+  box-shadow: 0 1px 0 rgba(255, 255, 255, 0.25);
+  border-radius: 2px; }
+
+.source-list.level-bar.fill-block {
+  border: none; }
+
+.source-list.fill-block, .source-list.fill-block:hover, .source-list.fill-block:selected, .source-list.fill-block:selected:focus {
+  background-image: none;
+  background-color: #ff5d73; }
+
 .xfce4-panel.panel {
   background-color: rgba(235, 235, 235, 0.7);
   color: #C3C7D1;
